menu overlapping minicart on scroll fixed

--- a/app/design/frontend/Homescapes/Develop/web/css/source/_extend.less
+++ b/app/design/frontend/Homescapes/Develop/web/css/source/_extend.less
@@ -10460,7 +10460,7 @@ select{
 | Menu sticky on top desktop
 --------------------------------------------------------------------------*/
 #myStickymenu{
-	z-index: 999;
+	z-index: 998;
 }
 .stickymenu {
   position: fixed;
